# aoc_2022

./: CMakeLists.txt
src/: main.cpp
src/AOC_2022_lib/: CMakeLists.txt  days.hpp  hello.asm
src/AOC_2022_lib/day1/: part1.c  part2.c
src/AOC_2022_lib/day2/: part1.c
